--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ header #user-pannel{
     color: #00bbca;
     float: right;
     font-family: Movistar;
-    padding: 6px 19px;
+    padding: 6px 30px 6px 19px;
     position: absolute;
     right: 12%;
     top: 0;
@@ -70,6 +70,23 @@ header a {
 }
 header a:hover {
     color: rgb(175,222,240);
+}
+header .unlog-button{
+    background-color: #ff0000;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    font-size: 10px;
+    font-weight: bold;
+    line-height: 16px;
+    padding: 1px 5px;
+    position: absolute;
+    right: 2%;
+    top: 21%;
+}
+header .unlog-button:hover{
+    color: white;
 }
 @font-face {
     font-family: Movistar;
@@ -317,13 +334,26 @@ footer #pie a {
 }
 #game-container .play-button-game{
     cursor: pointer;
-    width: 17%;
+    width: 18%;
     margin-top: 3%;
     border-radius: 8px;
+    font-size: 1.5vw;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    height: 12%;
+    background-color: #F8F8F8;
+    color: #333;
+    font-weight: bold;
 }
-#game-container .play-button-game:hover{
+#game-container .play-button-game:hover, #game-container .play-button-game2{
     width: 19%;
-    margin-top: 2.5%;
+    margin-left: 0%;
+    margin-top: 1%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-right: 0%;
+    font-size: 2vw;
+    height: 15%;
 }
 #game-container .back-button{
     border-radius: 6px;
@@ -448,6 +478,9 @@ footer #pie a {
     background-color: rgba(10, 93, 131, 0.95);
     border: 1px solid black;
 }
+#game-container .menu-screen.instructions-screen{
+    background-color: rgba(10, 93, 131, 1);
+}
 #game-container .straw:hover, #game-container .straw.selected{
     width: 3.5%;
     cursor: pointer;
@@ -473,19 +506,12 @@ footer #pie a {
     cursor: default;
     opacity:0.7;
 }
-#game-container .screen-msg{
-    font-size: 22px;
-}
 #game-container .h2-title{
-    font-size: 40px;
+    font-size: 4vw;
 }
-@media (max-width: 1200px){
-    #game-container .screen-msg{
-        font-size: 16px;
-    }
-    #game-container .h2-title{
-        font-size: 30px;
-    }
+ #game-container .screen-msg{
+    font-size: 2vw;
+    margin: 0 5%;
 }
 
 /*Flip effects*/
