--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ Created on : 03-jul-2015, 18:13:47
 Author     : jbustarviejo
 */
 
-/*Estilos genéricos*/
+/*Estilos de menú*/
 
 #body{
     width:100%; height: 100%; margin:0;
@@ -17,6 +17,10 @@ header .logo {
     position: absolute;
     right: 0;
     top: 18px;
+}
+header .logo > img {
+    margin-top: -15px;
+    max-height: 75px;
 }
 header #user-pannel{
     background-color: #005c83;
@@ -90,9 +94,35 @@ header .unlog-button:hover{
 }
 @font-face {
     font-family: Movistar;
-    src: url(fonts/Movistar.otf);
+    src: url("/fonts/Movistar.otf");
+}
+@font-face {
+    font-family: MovistarTextRegular;
+    font-style: normal;
+    font-weight: normal;
+    src:  local("MovistarTextRegular"), url("/fonts/MovistarTextRegular.ttf") format("truetype");
 }
 
+/*Menú responsive*/
+
+@media all and (max-width: 700px) { 
+    header .bot_desc{
+        clear: both;
+    }
+    header .menu{
+        height: 185px;
+    }
+}
+
+/*Estilos generales*/
+
+.main-description-image{
+     border-radius: 10px;
+    display: block;
+    margin: 26px auto auto;
+    max-width: 100%;
+    text-align: center;
+}
 .movistar-image-fake{
     width: 100%;
     max-width: 980px;
@@ -131,6 +161,8 @@ header .unlog-button:hover{
 #fake-container .user-points.hidden{
     display: none;
 }
+
+/*Estilos del pie*/
 
 footer #pie {
     background: #00517a none repeat scroll 0 0;
@@ -886,4 +918,116 @@ footer #pie a {
 
 #points-container thead td{
     color: #1d7a8b;
+}
+
+/*Tienda de puntos*/
+
+.sales-container-container {
+    color: #005c83;
+}
+.sale-container{
+    border: 2px solid #08C7D8;
+    border-radius: 15px;
+    padding: 5px 14px;
+    margin-bottom: 15px;
+    position: relative;
+    overflow: auto;
+}
+.sale-container:hover{
+    cursor: pointer;
+    opacity: 0.6;
+}
+.sale-container .box-left{
+    width: 32%;
+}
+.sale-container .box-right{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 65%;
+    height: 100%;
+    background-color: #08c7d8;
+}
+.box-left > img {
+    display: block;
+    margin: -5% auto 2%;
+    max-width: 100%;
+    position: relative;
+    text-align: center;
+    max-height: 125px;
+}
+.box-right > p {
+    margin-left: 20px;
+    color: #024971;
+}
+.box-left > p{
+    color: #005c84;
+    text-align: center;
+    font-size: 20px;
+    font-family: MovistarTextRegular;
+}
+.sale-container.clicked {
+    cursor: default;
+    opacity: 1;
+}
+.selling {
+    background-color: rgba(100, 100, 100, 0.9);
+    display: none;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+.clicked .selling{
+    display: block;
+}
+.selling button{
+    border: 2px solid #eee;
+    border-radius: 5px;
+    float: right;
+    font-size: 24px;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding: 1%;
+    margin-top: 33%;
+    margin-top: 3%;
+    cursor: pointer;
+}
+.selling button:hover{
+    opacity: 0.5;
+}
+.selling .cancel{
+    background-color: #ec5746;
+    margin-right: 33%;
+}
+.selling .buy{
+    background-color: #82ea6a;
+}
+.selling-buttons-container{
+    bottom: 0;
+    float: none;
+    height: 100px;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+}
+@media all and (max-width: 900px) { 
+    .selling-buttons-container{
+        width: 200px;
+    }
+    .selling button{
+        float: none;
+        position: relative;
+        margin: auto;
+        clear: both;
+        display: block;
+        margin-top: 6%;
+    }
+    .selling .cancel{
+        margin-right: auto;
+    }
 }
