--- a/css/style.css
+++ b/css/style.css
@@ -953,6 +953,10 @@ footer #pie a {
     margin: 0 0 15px;
 }
 
+.sales-container-container > h2{
+    clear: both;
+}
+
 #points-container table{
     border: 1px solid #666;
     border-radius: 5px;
@@ -980,28 +984,28 @@ footer #pie a {
 .sales-container-container {
     color: #005c83;
 }
-.sale-container{
-    border: 2px solid #08C7D8;
+.sale-container .box-left{
+    border: 2px solid #08c7d8;
     border-radius: 15px;
-    padding: 5px 14px;
+    float: left;
     margin-bottom: 15px;
+    margin-left: 11%;
     position: relative;
-    overflow: auto;
+    width: 30%;
 }
-.sale-container:hover{
+.sale-container .box-left:hover{
     cursor: pointer;
     opacity: 0.6;
 }
-.sale-container .box-left{
-    width: 32%;
+.sale-container .cancel{
+    background-color: #ff4444;    
 }
-.sale-container .box-right{
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 65%;
-    height: 100%;
-    background-color: #08c7d8;
+.sale-container .buy{
+    background-color: #44aa44;    
+}
+.sale-container button.disabled{
+    opacity: 0.5;
+    pointer-events: none;
 }
 .box-left > img {
     display: block;
@@ -1011,78 +1015,58 @@ footer #pie a {
     text-align: center;
     max-height: 125px;
 }
-.box-right > p {
-    margin-left: 20px;
-    color: #024971;
-}
 .box-left > p{
     color: #005c84;
     text-align: center;
     font-size: 20px;
     font-family: MovistarTextRegular;
 }
-.sale-container.clicked {
+.sale-container.clicked .shop-item-container{
     cursor: default;
     opacity: 1;
-}
-.selling {
-    background-color: rgba(100, 100, 100, 0.9);
-    display: none;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-.clicked .selling{
     display: block;
 }
-.selling button{
-    border: 2px solid #eee;
-    border-radius: 5px;
-    float: right;
-    font-size: 24px;
-    margin-left: 2%;
-    margin-right: 2%;
-    padding: 1%;
-    margin-top: 33%;
-    margin-top: 3%;
-    cursor: pointer;
+.shop-item-container{
+    width: 100%; height: 100%; 
+    display: none; 
+    position: fixed; 
+    z-index: 100; 
+    top: 0px; left: 0px; 
+    background-color: rgba(55, 55, 55, 0.7);
 }
-.selling button:hover{
-    opacity: 0.5;
-}
-.selling .cancel{
-    background-color: #ec5746;
-    margin-right: 33%;
-}
-.selling .buy{
-    background-color: #82ea6a;
-}
-.selling-buttons-container{
+
+.shop-item-container>div{
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
     bottom: 0;
-    float: none;
-    height: 100px;
+    display: block;
+    font-family: Movistar;
+    height: 300px;
     left: 0;
     margin: auto;
+    padding: 2%;
     position: absolute;
     right: 0;
+    text-align: center;
     top: 0;
-    width: 100%;
+    vertical-align: middle;
+    width: 50%;
 }
-@media all and (max-width: 900px) { 
-    .selling-buttons-container{
-        width: 200px;
+@media all and (max-width: 750px) { 
+    .shop-item-container>div{
+        height: auto;
     }
-    .selling button{
-        float: none;
-        position: relative;
-        margin: auto;
-        clear: both;
-        display: block;
-        margin-top: 6%;
-    }
-    .selling .cancel{
-        margin-right: auto;
-    }
+}
+
+.shop-item-container button {
+    background-color: #003245;
+    border: 1px solid;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    padding: 0.5% 6%;
+}
+
+.shop-item-container button:hover{
+    opacity: 0.7;
 }
