--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ header .unlog-button:hover{
 }
 
 /*Estilo del diálogo de acceso*/
-#login-menu-container{
+#login-menu-container, #user-without-points-dialog{
     width: 100%; height: 100%; 
     display: block; 
     position: fixed; 
@@ -126,8 +126,7 @@ header .unlog-button:hover{
 #login-menu-container #games-goal{
     height: 370px;
 }
-
-#login-menu-container>div{
+#login-menu-container>div, #user-without-points-dialog>div{
     background-color: rgb(255, 255, 255);
     border-radius: 15px;
     bottom: 0;
@@ -144,6 +143,9 @@ header .unlog-button:hover{
     vertical-align: middle;
     width: 50%;
 }
+#user-without-points-dialog{
+    z-index: 101;
+}
 @media all and (max-width: 750px) { 
     #login-menu-container>div{
         height: auto;
@@ -159,7 +161,7 @@ header .unlog-button:hover{
     width: 46%;
 }
 
-#login-menu-container button {
+#login-menu-container button, #user-without-points-dialog button{
     background-color: #003245;
     border: 1px solid;
     color: #fff;
@@ -168,7 +170,7 @@ header .unlog-button:hover{
     padding: 0.5% 6%;
 }
 
-#login-menu-container button:hover{
+#login-menu-container button:hover, #user-without-points-dialog button{
     opacity: 0.7;
 }
 
@@ -351,6 +353,11 @@ footer #pie a {
         -webkit-transform: rotate(359deg);
         transform: rotate(359deg);
     }
+}
+#not-enought-points-screen{
+    z-index: 12;
+    background-color: #0a5d83;
+    color: white;
 }
 #login-menu .login-button{
     border: 3px solid #666;
