--- a/css/style.css
+++ b/css/style.css
@@ -431,26 +431,32 @@ footer #pie a {
 }
 #game-container .play-button-game{
     cursor: pointer;
-    width: 18%;
-    margin-top: 3%;
+    width: 25%;
+    margin-top: 4%;
     border-radius: 8px;
     font-size: 1.5vw;
     margin-left: 0.5%;
     margin-right: 0.5%;
-    height: 12%;
+    height: 16%;
     background-color: #F8F8F8;
     color: #333;
     font-weight: bold;
 }
+#game-container .play-button-game .green{
+    color: #44aa44;
+}
+#game-container .play-button-game .red{
+    color: #ff4444;
+}
 #game-container .play-button-game:hover, #game-container .play-button-game2{
     font-size: 2vw;
-    height: 16%;
+    height: 23%;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 1.4%;
+    margin-top: 2%;
     padding-bottom: 2%;
     padding-top: 1%;
-    width: 19%;
+    width: 28%;
 }
 #game-container .back-button{
     border-radius: 6px;
@@ -1038,6 +1044,19 @@ footer #pie a {
     border-width: 4px;
     background-color: #d8e4e5;
 }
+p.purchased-title{
+    color: green;
+    display: none;
+    position: absolute;
+    right: 20px;
+    top: 0;
+}
+.sale-container.purchased p.purchased-title{
+    display: block;
+}
+.sale-container.purchased .box-left{
+   background-color: #ceffce;
+}
 .sale-container.clicked .shop-item-container{
     cursor: default;
     opacity: 1;
@@ -1050,6 +1069,11 @@ footer #pie a {
     z-index: 100; 
     top: 0px; left: 0px; 
     background-color: rgba(55, 55, 55, 0.7);
+}
+
+.shop-item-container .item-purchased{
+    height: 170px; 
+    display: none;
 }
 
 .shop-item-container>div{
