--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ footer #pie a {
         transform: rotate(359deg);
     }
 }
-#not-enought-points-screen{
+#not-enought-points-screen, #not-enought-points-screen-2{
     z-index: 12;
     background-color: #0a5d83;
     color: white;
