--- a/css/style.css
+++ b/css/style.css
@@ -1141,7 +1141,7 @@ p.purchased-title{
     display: none;
     position: absolute;
     right: 20px;
-    top: 0;
+    top: -11px;
 }
 .sale-container.purchased p.purchased-title{
     display: block;
